<resources>
    <string name="app_name">common</string>
    <string name="first_launch_title">Nursery of the Future</string>
    <string name="first_launch_login">Have an account?</string>
    <string name="first_launch_sign_in">Sign In</string>
    <string name="first_launch_sign_up">Sign Up</string>
    <string name="legal_important">Important</string>
    <string name="legal_agree_button">I Accept</string>
    <string name="legal_terms" formatted="false">By tapping I Accept, you agree to our <a href="https://eula.cn.platform.mattel/Mattel_Mobile_Apps_-_End_User_License_Agreement_EULA.html">End-User License Agreement</a> and <a href="https://www.mattel.com/en-us/privacy-statement">Privacy Statement</a>.</string>
    <string name="legal_agree_message_01">By tapping I Accept, you agree to our</string>
    <string name="legal_agree_message_02">End-User License Agreement</string>
    <string name="legal_agree_message_03">and</string>
    <string name="legal_agree_message_04">Privacy Statement</string>
    <string name="legal_content">This summary highlights key parts of the <a href="https://www.mattel.com/en-us/privacy-statement">MATTEL GENERAL PRIVACY STATEMENT</a>, which governs. Look for key terms (italicized and underlined <i><u>like this</u></i>) in the <a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">DEFINITIONS </a>section \n\n
        <b> What Information May Be Collected</b>
        \n \t \t \u2022  <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">Automatically collected info</a></i>, like <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">device info</a></i> and network info
        \n \t \t \u2022 <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">Approximate, network-based location</a></i>
        \n \t \t \u2022 <a href="https://www.mattel.com/en-us/about-cookies-and-technologies">ABOUT COOKIES &amp; TECH:</a> We, our <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">3rd-party partners</a></i> &amp; <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">3rd-party tech partners get some automatically collected info</a></i> &amp;
        other <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">info </a></i>using tech like cookies, web beacons, or others. Read more at the <a href="http://corporate.mattel.com/pdfs/third-party-partners.pdf">MOBILE 3RD-PARTY TECH LIST.</a>

        \n\n
        <b>Why It’s Collected</b>
        \n \t \t \u2022 Support internal operations (provide and improve products and services, analytics).
        \n \t \t \u2022 Fulfill requests, including in-app purchases.
        \n \t \t \u2022 Understand consumers.
        \n \t \t \u2022 Optimize functionality.
        \n \t \t \u2022 Manage content and ads.
        \n \t \t \u2022 For some apps, personalization.

        \n\n
        <b>With Whom It\'s Shared</b>
        \n \t \t \u2022 Within the <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">Mattel family of companies</a></i>, and with our <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">3rd-party partners</a></i> and <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">3rd-party technology partners</a></i> to support internal operations.
        \n \t \t \u2022 With <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">3rd parties</a></i> for marketing purposes.
        \n \t \t \u2022 For <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">user-generated content,</a></i> if available, with family, friends, or the public as you choose. See app details for info.
        \n \t \t \u2022 As necessary, required, or permitted by law.

        \n\n
        <b>Contact Us/Review or Delete Your or Your Baby\'s Collected Info</b>
        \n \t \t \u2022 Visit <a href="https://www.mattel.com/en-us/privacy-statement#anchor-Contact-Us-With-Your-Questions">CONTACT US</a>
        \n \t \t \u2022 Parents: Use the <a href="http://corporate.mattel.com/ParentalAccessForm.pdf">PARENTAL ACCESS FORM</a> to learn about your <i><a href="https://www.mattel.com/en-us/privacy-statement#anchor-1">kid’s personal info</a></i> or start process to make choices about it.
        \n \t \t \u2022 To make choices about information or communications, please visit <a href="https://www.mattel.com/en-us/privacy-statement#anchor-10">YOUR CHOICES AND CONTROLS.</a>

        \n\n
        <b>Other Important Info</b>
        \n \t \t \u2022 Data may be transferred to another country
        \n \t \t \u2022 You can learn about <a href="https://www.mattel.com/en-us/privacy-statement#anchor-17">YOUR EUROPEAN PRIVACY RIGHTS</a>
        \n \t \t \u2022 The full <a href="https://www.mattel.com/en-us/privacy-statement">MATTEL GENERAL PRIVACY STATEMENT</a> governs.

        \n\n
        © 2018 Mattel.
    </string>
    <string name="login_title">Sign In</string>
    <string name="login_sign_in_button">Sign In</string>
    <string name="login_facebook_button">Login with Facebook</string>
    <string name="login_or">Or</string>
    <string name="login_forgot_password_button">Forgot Your password?</string>
    <string name="login_update_url">Update Url</string>
    <string name="login_invalid_email_address">Invalid email address</string>
    <string name="login_email_placeholder">Email </string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_save">Save</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_error_title">Uh Oh</string>
    <string name="login_error_message">Email and password do not match. Please try again.</string>
    <string name="login_error_try_again">Try Again.</string>
    <string name="username_error_invalid_email_phone_number">Invalid email or phone number</string>
    <string name="username_error_invalid_try_again">Invalid email or phone number. Please try again.</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_message">Enter the email you used for this account.</string>
    <string name="forgot_password_email_placeholder">Email</string>
    <string name="forgot_password_sms_warning"></string>
    <string name="forgot_enter_phone_number_message">We will send you a verification code to create a new password.</string>
    <string name="forgot_password_phone_placeholder">Mobile Phone</string>
    <string name="forgot_invalid_email_format">Invalid email address format</string>
    <string name="forgot_password_send">Send</string>
    <string name="forgot_phone_number_error">Unknown phone number. Please try again.</string>
    <string name="forgot_password_email_error">Unknown Email. Please try again.</string>
    <string name="forgot_password_next">Next</string>
    <string name="sms_verification_code">Verification Code</string>
    <string name="sms_verification_header">Enter Verification Code</string>
    <string name="sms_verification_message_phone">Open the text message from %s with a security code to reset your password.</string>
    <string name="sms_verification_message_email">Open the email from %s with a security code to reset your password.</string>
    <string name="sms_verification_next">Next</string>
    <string name="sms_verification_phone_instruction">Enter the code sent to %s</string>
    <string name="sms_verification_code_hint">Code</string>
    <string name="sms_verification_code_sent_text">Please check your text message for the verification code.</string>
    <string name="sms_verification_request_code">Request new code</string>
    <string name="sms_verification_pin_sent_successfully">Pin sent successfully</string>
    <string name="set_new_password_title">New Password</string>
    <string name="set_new_password_header">Enter New Password</string>
    <string name="set_new_password_message">Please create a new password for your account</string>
    <string name="set_new_password_placeholder">New Password</string>
    <string name="set_new_password_confirm_placeholder">Confirm Password</string>
    <string name="set_new_password_tips">Password Tips</string>
    <string name="set_new_password_tips_content">At least 8 characters long \n Contains at least one number \n Includes uppercase and lowercase letters \n Add a special character</string>
    <string name="set_new_password_error_too_short">Please create a password that\'s at least 8 characters.</string>
    <string name="set_new_password_error_too_long">Please create a password that\'s less than 72 characters.</string>
    <string name="set_new_password_do_not_match">Password don\'t match</string>
    <string name="set_new_password_required">Password is required</string>
    <string name="account_creation_title">Account Creation</string>
    <string name="account_creation_next">Next</string>
    <string name="account_creation_or">Or</string>
    <string name="account_creation_first_name">First Name</string>
    <string name="account_creation_last_name">Last Name</string>
    <string name="account_creation_email">E-mail</string>
    <string name="account_creation_mobile_phone">Mobile Phone</string>
    <string name="account_creation_password">Password</string>
    <string name="account_creation_password_confirmation">Re-type Password</string>
    <string name="account_creation_first_name_required">First Name is required</string>
    <string name="account_creation_last_name_required">Last Name is required</string>
    <string name="account_creation_email_required">E-mail is required</string>
    <string name="account_creation_phone_required">Phone is required</string>
    <string name="account_creation_password_required">Password is required</string>
    <string name="account_creation_invalid_email_format">Invalid email address format</string>
    <string name="account_creation_invalid_phone_format">Invalid number format</string>
    <string name="account_creation_passwords_do_not_match">Passwords do not match</string>
    <string name="account_creation_password_too_short">Password must be at least 8 characters</string>
    <string name="account_creation_password_too_long">Password cannot be more than 72 characters</string>
    <string name="account_creation_email_already_registered">The email address is already registered</string>
    <string name="child_profile_cancel">Cancel</string>
    <string name="child_profile_camera">Take a photo</string>
    <string name="child_profile_choose_library">Choose from library</string>
    <string name="my_information_first_name_text_field_placeholder">First Name</string>
    <string name="my_information_last_name_text_field_placeholder">Last Name</string>
    <string name="my_information_email_text_field_placeholder">E-mail</string>
    <string name="my_information_phone_number_text_field_placeholder">Phone Number</string>
    <string name="my_information_first_name_text_field_required_message">First Name is required</string>
    <string name="my_information_last_name_text_field_required_message">Last Name is required</string>
    <string name="my_information_email_text_field_required_message">E-mail is required</string>
    <string name="my_information_phone_number_text_field_required_message">Phone is required</string>
    <string name="my_information_password_text_field_placeholder">Password</string>
    <string name="my_information_password_text_field_required_message">Phone is required</string>
    <string name="my_information_password_too_short">Password must be at least 8 characters</string>
    <string name="my_information_phone_hint_message">Your phone number will only be used when you need to recover your forgotten password.</string>
    <string name="music_sound">Music &amp; Sound :  </string>
    <string name="device_off">off</string>
    <string name="timer_off">Timer: Off</string>
    <string name="my_information_change_password_button_title">Change Password</string>
</resources>