<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/message1"
        style="@style/SubtextOne.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin2"
        android:gravity="center"
        android:text="@string/forgot_password_message"/>

    <TextView
        android:id="@+id/message2"
        style="@style/SubtextOne.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin2"
        android:gravity="center"
        android:text="@string/forgot_enter_phone_number_message"/>

    <com.sproutling.common.ui.widget.CustomShInputTextLayout
        android:id="@+id/phoneWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message2"
        android:layout_margin="@dimen/margin2"
        app:errorMsg="@string/forgot_invalid_email_format"
        >

        <com.sproutling.common.ui.widget.CustomShEditText
            android:id="@+id/userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_email_placeholder"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>
    </com.sproutling.common.ui.widget.CustomShInputTextLayout>

    <TextView
        android:id="@+id/notice"
        style="@style/SubtextOne.6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:text="@string/forgot_password_sms_warning"/>
</RelativeLayout>