<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleInstruction"
        style="@style/SubtextOne.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin2"
        android:gravity="center"
        android:text="@string/sms_verification_message_email"
        />

    <TextView
        android:id="@+id/instruction"
        style="@style/SubtextOne.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleInstruction"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin2"
        android:gravity="center"
        android:text="@string/sms_verification_phone_instruction"/>


    <com.sproutling.common.ui.widget.CustomShInputTextLayout
        android:id="@+id/codeWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="25dp"
        app:errorMsg="@string/sms_verification_code_sent_text">

        <com.sproutling.common.ui.widget.CustomShEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sms_verification_code_hint"
            android:inputType="numberDecimal"
            android:letterSpacing="0.3"
            android:maxEms="5"
            android:maxLength="5"
            android:minEms="5"/>
    </com.sproutling.common.ui.widget.CustomShInputTextLayout>

    <TextView
        android:id="@+id/resendCode"
        style="@style/SubtextFive.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="?selectableItemBackground"
        android:padding="10dp"
        android:text="@string/sms_verification_request_code"/>
</RelativeLayout>