<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/tips_content"
        style="@style/SubtextOne.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grey05"
        android:gravity="center"
        android:padding="@dimen/margin2"
        android:text="@string/set_new_password_tips_content"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tips_content"
        android:background="@color/white"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/title"
            style="@style/SubtextOne.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin4"
            android:gravity="center"
            android:text="@string/set_new_password_message"/>

        <com.sproutling.common.ui.widget.CustomShInputTextLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            app:errorMsg="@string/set_new_password_required"
            app:infoMsg="@string/set_new_password_error_too_short"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.sproutling.common.ui.widget.CustomShEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_new_password_header"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.sproutling.common.ui.widget.CustomShInputTextLayout>

        <com.sproutling.common.ui.widget.CustomShInputTextLayout
            android:id="@+id/confirm_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.sproutling.common.ui.widget.CustomShEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_new_password_confirm_placeholder"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.sproutling.common.ui.widget.CustomShInputTextLayout>

        <TextView
            android:id="@+id/tips"
            style="@style/SubtextOne.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_light_bulb_small"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/set_new_password_tips"/>
    </RelativeLayout>

</RelativeLayout>