<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/take_photo"
        style="@style/SubtextFive.10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/child_profile_camera" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#a9a9a9" />

    <TextView
        android:id="@+id/choose_from_library"
        style="@style/SubtextFive.10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/child_profile_choose_library" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#a9a9a9" />

    <TextView
        android:id="@+id/cancel"
        style="@style/SubtextFive.10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/child_profile_cancel" />

</LinearLayout>
