<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/dashboard_image_width"
        android:layout_height="@dimen/dashboard_image_width"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_sound_icon" />

    <TextView
        android:id="@+id/music_sound"
        style="@style/SubtextOne.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dashboard_text_start_margin"
        android:layout_toEndOf="@id/product_image"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/music_sound"
        android:textSize="@dimen/product_card_text_size" />

    <TextView
        android:id="@+id/music_on"
        style="@style/SubtextOne.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dashboard_text_start_margin"
        android:layout_toEndOf="@id/music_sound"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/device_off"
        android:textSize="@dimen/product_card_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/music_timer"
        style="@style/SubtextOne.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:ellipsize="end"
        android:padding="@dimen/dashboard_clickable_text_padding"
        android:singleLine="true"
        android:text="@string/timer_off"
        android:textSize="@dimen/product_card_text_size" />
</RelativeLayout>